--- a/linear/finaexam.tex
+++ b/linear/finaexam.tex
@@ -1,192 +1,192 @@
 \documentclass[9pt,landscape,twocolumn]{article}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[margin=0.3in]{geometry}
-\usepackage{amsmath, amssymb, amsfonts, bm, enumitem, xcolor, tcolorbox, multicol}
+\usepackage{amsmath, amssymb, amsfonts, bm, enumitem, xcolor, tcolorbox, multicol, titlesec}
 
-% Custom Box Styles for High Density and Visual Clarity
+% --- THEME COLORS & BOX STYLES ---
+\definecolor{myblue}{named}{RoyalBlue}
+\definecolor{mygreen}{named}{ForestGreen}
+\definecolor{myred}{named}{Red}
+\definecolor{myyellow}{named}{Apricot}
+
 \tcbset{
     enhanced, boxrule=0.5pt, arc=0pt, outer arc=0pt,
     fonttitle=\bfseries\sffamily, breakable,
     left=2pt, right=2pt, top=6pt, bottom=2pt
 }
-\newtcolorbox{algobox}[1]{colback=blue!5!white, colframe=blue!75!black, title={#1}}
-\newtcolorbox{exbox}[1]{colback=green!5!white, colframe=green!75!black, title={#1}}
-\newtcolorbox{thmbox}[1]{colback=red!5!white, colframe=red!75!black, title={#1}}
+\newtcolorbox{algobox}[1]{colback=myblue!5!white, colframe=myblue!75!black, title={#1}}
+\newtcolorbox{exbox}[1]{colback=myred!5!white, colframe=myred!75!black, title={#1}}
+\newtcolorbox{thmbox}[1]{colback=mygreen!5!white, colframe=mygreen!75!black, title={#1}}
 
-\setlist{nosep}
+\setlist{nosep, leftmargin=*}
+\pagestyle{empty}
 
 \begin{document}
 
-% --- PAGE 1: SYSTEMS, MATRIX ALGEBRA & INVERTIBILITY ---
+% --- PAGE 1: SYSTEMS, VECTORS & MATRIX ALGEBRA ---
 \begin{center}
-    \textbf{\Large MATH 231 FINAL EXAM BATTLE PLAN - PAGE 1} \\
-    \textit{Linear Systems, Augmented Matrices, and the Master IMT}
+    \textbf{\Large MATH 231 ULTIMATE FINAL EXAM BATTLE PLAN - PAGE 1} \\
+    \textit{Systems, Vectors, Spans, and Matrix Algebra (Ch 1-2)}
 \end{center}
 
 \begin{multicols}{2}
-\section*{1. Linear Systems \& RREF Procedures (Sec 1.1, 1.2)}
-\begin{algobox}{RREF and Solution Counts}
+\section*{I. Systems and RREF (1.1, 1.2)}
+\begin{thmbox}{Existence and Uniqueness (Thm 1.2)}
 \begin{itemize}
-    \item \textbf{Augmented Matrix}: $[A \mid b]$.
-    \item \textbf{Pivot}: Leading 1 in RREF. \textbf{Basic}: Pivot cols; \textbf{Free}: Non-pivot.
-    \item \textbf{Consistency}: Inconsistent if the last column of $[A \mid b]$ is a pivot.
-    \item \textbf{Unique}: Pivot in every column of $A$; \textbf{Infinite}: Consistent with free variables.
-\end{itemize}
-\end{algobox}
-
-\begin{exbox}{Example: Parametric Solution}
-$rref(A) = \begin{bmatrix} 1 & -7 & 0 & 2 \\ 0 & 0 & 1 & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}$. Basic: $x_1, x_3$. Free: $x_2, x_4$.
-$x_1 = 7x_2 - 2x_4$ and $x_3 = x_4$.
-\end{exbox}
-
-\section*{2. The Invertible Matrix Theorem (IMT) (Sec 2.3)}
-\begin{thmbox}{Equivalent Statements for $n \times n$ Matrix $A$}
-\begin{itemize}
-    \item $A$ is invertible $\iff \det(A) \neq 0$.
-    \item $A \sim I_n$ and has $n$ pivot positions.
-    \item $Ax = 0$ has only the trivial solution ($x=0$).
-    \item Columns form a basis for $\mathbb{R}^n$ and are linearly independent.
-    \item $x \mapsto Ax$ is one-to-one and onto $\mathbb{R}^n$.
-    \item $rank(A) = n$ and $nullity(A) = 0$.
-    \item $0$ is NOT an eigenvalue.
+    \item \textbf{Existence:} Consistent $\iff [A \mid \mathbf{b}]$ has \textbf{NO pivot} in the rightmost column.
+    \item \textbf{Unique:} Consistent AND \textbf{No free variables} (Pivot in every column of $A$).
+    \item \textbf{Infinite:} Consistent AND at least one free variable.
 \end{itemize}
 \end{thmbox}
 
-\section*{3. Matrix Algebra \& Inverse Computation (Sec 2.1, 2.2)}
-\begin{algobox}{Inverse Properties and Algorithms}
+\begin{exbox}{Example: Parametric Vector Form (PVF)}
+If $x_1 = 5-3x_3$ and $x_2 = -3-2x_3$ with $x_3$ free, the solution is:
+$\mathbf{x} = \begin{bmatrix} 5 \\ -3 \\ 0 \end{bmatrix} + x_3 \begin{bmatrix} -3 \\ -2 \\ 1 \end{bmatrix}$ where $\mathbf{p}$ is particular and $\mathbf{v}_h$ is homogeneous.
+\end{exbox}
+
+\section*{II. Vectors, Span, and Independence (1.3-1.7)}
+\begin{thmbox}{Span and Independence Tests}
 \begin{itemize}
-    \item \textbf{Inverses}: $(AB)^{-1} = B^{-1}A^{-1}$.
-    \item \textbf{Algorithm}: $[A \mid I] \sim [I \mid A^{-1}]$.
-    \item \textbf{2x2 Shortcut}: $A^{-1} = \frac{1}{ad-bc} \begin{bmatrix} d & -b \\ -c & a \end{bmatrix}$.
-    \item \textbf{Logic}: If $AB$ and $B$ are invertible, $A = (AB)B^{-1}$ is invertible.
+    \item \textbf{Cols span $\mathbb{R}^m \iff$} $A$ has a \textbf{pivot in every row}.
+    \item \textbf{LI $\iff$} $Ax=0$ has \textbf{only trivial solution} (Pivot in every column).
+    \item \textbf{LD Instant Checks:} More vectors than entries ($p>n$); contains $\mathbf{0}$ vector; one vector is a multiple of another.
+\end{itemize}
+\end{thmbox}
+
+\section*{III. Linear Transformations (1.8, 1.9)}
+\begin{algobox}{Standard Matrix $A$ & Mapping Tests}
+\begin{itemize}
+    \item \textbf{Standard Matrix:} $A = [T(\mathbf{e}_1) \dots T(\mathbf{e}_n)]$.
+    \item \textbf{Onto (Surjective):} Pivot in every \textbf{row}.
+    \item \textbf{One-to-One (Injective):} Pivot in every \textbf{column}.
+\end{itemize}
+\end{algobox}
+
+\section*{IV. Matrix Algebra & Inverses (2.1-2.3)}
+\begin{algobox}{Inverse Properties & 2x2 Shortcut}
+\begin{itemize}
+    \item \textbf{Inverse Algorithm:} $[A \mid I] \sim [I \mid A^{-1}]$.
+    \item \textbf{2x2 Shortcut:} $A^{-1} = \frac{1}{ad-bc} \begin{bmatrix} d & -b \\ -c & a \end{bmatrix}$.
+    \item \textbf{Properties:} $(AB)^{-1} = B^{-1}A^{-1}$; $(A^T)^{-1} = (A^{-1})^T$.
 \end{itemize}
 \end{algobox}
 \end{multicols}
 
 \newpage
-% --- PAGE 2: DETERMINANTS & TRANSFORMATIONS ---
+% --- PAGE 2: DETERMINANTS, SUBSPACES & LOGIC ---
 \begin{center}
-    \textbf{\Large MATH 231 FINAL EXAM BATTLE PLAN - PAGE 2} \\
-    \textit{Determinant Algebra, Transformations, and Vlamis Logic Arguments}
+    \textbf{\Large MATH 231 ULTIMATE FINAL EXAM BATTLE PLAN - PAGE 2} \\
+    \textit{Determinants, Subspaces, and Vlamis Logic Arguments (Ch 2-3)}
 \end{center}
 
 \begin{multicols}{2}
-\section*{4. Determinant Operations (Sec 3.1, 3.2)}
-\begin{thmbox}{Properties}
+\section*{V. Determinants (3.1, 3.2)}
+\begin{thmbox}{Properties & Strategy}
 \begin{itemize}
-    \item \textbf{Scaling}: $\det(cA) = c^n \det(A)$.
-    \item \textbf{Multiplication}: $\det(AB) = \det(A)\det(B)$.
-    \item \textbf{Inverses}: $\det(A^{-1}) = 1/\det(A)$.
-    \item \textbf{Row Ops}: Swap ($\times -1$); Scale by $k$ ($\times k$); Replacement (no change).
+    \item \textbf{Scaling:} $\det(kA) = k^n \det(A)$.
+    \item \textbf{Row Ops:} Swap = $-det$; Replacement = No change; Scaling $R_i$ by $k$ = $k \cdot det$.
+    \item \textbf{Inverse:} $\det(A^{-1}) = 1/\det(A)$.
+    \item \textbf{Invertible $\iff \det(A) \neq 0$}.
 \end{itemize}
 \end{thmbox}
 
-\begin{exbox}{Example: Row Operations}
-If $A = \begin{bmatrix} 1 & 2 \\ 3 & 4 \end{bmatrix}$ has $\det(A) = -2$, swapping rows yields $\det = 2$.
-\end{exbox}
-
-\section*{5. Linear Transformations (Sec 1.8, 1.9)}
-\begin{algobox}{Mappings}
+\section*{VI. Subspaces, Rank & Basis (2.8, 2.9)}
+\begin{algobox}{Basis & Dimension Rules}
 \begin{itemize}
-    \item \textbf{Standard Matrix}: $A = [T(e_1) \dots T(e_n)]$.
-    \item \textbf{Onto}: Pivot in every row. Impossible if $m > n$.
-    \item \textbf{1-to-1}: Pivot in every column ($Ax=0$ trivial).
-    \item \textbf{Rotation}: $R_{\theta} = \begin{bmatrix} \cos \theta & -\sin \theta \\ \sin \theta & \cos \theta \end{bmatrix}$.
+    \item \textbf{Basis Col(A):} Pivot columns of \textbf{ORIGINAL} matrix.
+    \item \textbf{Basis Nul(A):} Solve $Ax=0$ and write in parametric form.
+    \item \textbf{Rank-Nullity:} $rank(A) + nullity(A) = n$ (total cols).
 \end{itemize}
 \end{algobox}
 
-\section*{6. Detailed Vlamis Style Arguments}
-\begin{exbox}{Counter-Examples and Logic}
+\section*{VII. Vlamis Style Logic & Traps}
+\begin{exbox}{Proofs & Counter-examples}
 \begin{itemize}
-    \item \textbf{Dependency}: If last col of $AB = \vec{0}$ and $B$ has no zero cols, then $A\vec{b}_n = \vec{0}$ (dependent cols).
-    \item \textbf{Identical Cols}: If $\vec{a}_i = \vec{a}_j$, then $A(\vec{e}_i - \vec{e}_j) = \vec{0}$ (not invertible).
-    \item \textbf{Subspace Trap}: $W = \{ \begin{bmatrix} x \\ y \end{bmatrix} : xy \ge 0 \}$ fails addition closure.
+    \item \textbf{Subspace Trap:} $W = \{[x,y]^T : xy \geq 0\}$ is NOT a subspace (fails addition closure).
+    \item \textbf{Dependency Arg:} If $AB$ has a zero column and $B$ does not, $A$ must have dependent columns.
+    \item \textbf{Identical Cols:} If square $A$ has $\vec{a}_i = \vec{a}_j$, then $A$ is not invertible.
 \end{itemize}
 \end{exbox}
+
+\section*{VIII. THE INVERSE MATRIX THEOREM (IMT)}
+\begin{tcolorbox}[colback=myyellow!10!white, colframe=Orange, title=CUMULATIVE EQUIVALENTS]
+For square $n \times n$ matrix $A$, these are equivalent: \\
+1. $A$ is invertible $\iff \det(A) \neq 0$. \\
+2. $A \sim I_n$ (has $n$ pivots). \\
+3. $Ax=0$ has only the trivial solution. \\
+4. Columns are LI and span $\mathbb{R}^n$. \\
+5. $rank(A) = n$ and $nullity(A) = 0$. \\
+6. $0$ is NOT an eigenvalue.
+\end{tcolorbox}
 \end{multicols}
 
 \newpage
-% --- PAGE 3: SUBSPACES & EIGENVALUES ---
+% --- PAGE 3: EIGENVALUES & MARKOV CHAINS ---
 \begin{center}
-    \textbf{\Large MATH 231 FINAL EXAM BATTLE PLAN - PAGE 3} \\
-    \textit{Subspace Properties, Rank-Nullity, and Markov Chains}
+    \textbf{\Large MATH 231 ULTIMATE FINAL EXAM BATTLE PLAN - PAGE 3} \\
+    \textit{Eigen-theory and Stochastic Processes (Ch 5 & App)}
 \end{center}
 
 \begin{multicols}{2}
-\section*{7. Subspaces, Rank \& Basis (Sec 2.8, 2.9)}
-\begin{thmbox}{Definitions}
-\begin{itemize}
-    \item \textbf{Col A}: Basis = Pivot columns of \textbf{original} matrix $A$.
-    \item \textbf{Null A}: Basis = vectors in parametric form of $Ax=0$.
-    \item \textbf{Rank-Nullity}: $rank(A) + nullity(A) = n$.
-\end{itemize}
-\end{thmbox}
-
-\section*{8. Eigenvalues ($\lambda$) \& Eigenvectors ($v$)}
-\begin{algobox}{Calculations (Sec 5.1-5.3)}
-\begin{itemize}
-    \item \textbf{Char Equation}: $\det(A - \lambda I) = 0$.
-    \item \textbf{Eigenspace ($E_\lambda$)}: $Null(A - \lambda I)$.
-    \item \textbf{Diagonalization}: $A = PDP^{-1}$ (requires $n$ independent eigenvectors).
-\end{itemize}
+\section*{IX. Eigenvalues & Eigenvectors (5.1, 5.2)}
+\begin{algobox}{Algorithm: Finding $\lambda$ and $\mathbf{x}$}
+1. \textbf{Char Eq:} Solve $\det(A - \lambda I) = 0$. \\
+2. \textbf{Find $\mathbf{x}$:} For each $\lambda$, solve $(A - \lambda I)\mathbf{x} = \mathbf{0}$. \\
+3. \textbf{Note:} Eigenspace is $Nul(A - \lambda I)$.
 \end{algobox}
 
-\begin{exbox}{Example: Eigenvalues}
-For $A = \begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}$, $\det(A-\lambda I) = (2-\lambda)(4-\lambda) = 0 \Rightarrow \lambda = 2, 4$.
+\begin{exbox}{Example: Diagonalization}
+$A = PDP^{-1}$ if $A$ has $n$ LI eigenvectors. $D$ is diagonal matrix of eigenvalues, $P$ is matrix of eigenvectors.
 \end{exbox}
 
-\section*{9. Markov Chains (App. 10.1, 10.2)}
-\begin{algobox}{Steady-State Calculations}
+\section*{X. Markov Chains (App 10.1)}
+\begin{algobox}{Steady State Vector $\mathbf{w}$}
 \begin{itemize}
-    \item \textbf{Stochastic Matrix}: Columns $\ge 0$ and sum to 1.
-    \item \textbf{Steady-State}: Solve $(M - I)x = \vec{0}$ and normalize entries.
+    \item \textbf{Matrix:} Stochastic matrix $M$ has columns summing to 1.
+    \item \textbf{Find $\mathbf{w}$:} Solve $(M - I)\mathbf{x} = \mathbf{0}$.
+    \item \textbf{Normalization:} Scale the result so the sum of entries is 1.
 \end{itemize}
 \end{algobox}
 
-\begin{exbox}{Example: Steady State}
-$M = \begin{bmatrix} 0.7 & 0.2 \\ 0.3 & 0.8 \end{bmatrix}$. Solve $(M-I)x = 0 \Rightarrow \begin{bmatrix} -0.3 & 0.2 \\ 0.3 & -0.2 \end{bmatrix} \begin{bmatrix} x_1 \\ x_2 \end{bmatrix} = 0$.
-$3x_1 = 2x_2$. If $x_1+x_2=1$, then $x_1=0.4, x_2=0.6$. $w = \begin{bmatrix} 0.4 \\ 0.6 \end{bmatrix}$.
+\begin{exbox}{Steady State Example}
+$M = \begin{bmatrix} 0.7 & 0.2 \\ 0.3 & 0.8 \end{bmatrix}$. Solve $\begin{bmatrix} -0.3 & 0.2 \\ 0.3 & -0.2 \end{bmatrix}x=0$. \\
+$3x_1 = 2x_2 \to$ basis $\begin{bmatrix} 2 \\ 3 \end{bmatrix}$. Normalized: $\mathbf{w} = \begin{bmatrix} 0.4 \\ 0.6 \end{bmatrix}$.
 \end{exbox}
 \end{multicols}
 
 \newpage
 % --- PAGE 4: ORTHOGONALITY & LEAST SQUARES ---
 \begin{center}
-    \textbf{\Large MATH 231 FINAL EXAM BATTLE PLAN - PAGE 4} \\
-    \textit{Projections, Gram-Schmidt, QR, and Least Squares}
+    \textbf{\Large MATH 231 ULTIMATE FINAL EXAM BATTLE PLAN - PAGE 4} \\
+    \textit{Orthogonality, Gram-Schmidt, and Optimization (Ch 6)}
 \end{center}
 
 \begin{multicols}{2}
-\section*{10. Orthogonality \& Projections (Sec 6.1-6.3)}
-\begin{thmbox}{Theorems}
+\section*{XI. Orthogonality & Projections (6.1-6.3)}
+\begin{thmbox}{Core Theorems}
 \begin{itemize}
-    \item \textbf{Inner Product}: $u \cdot v = \sum u_i v_i$. Norm $\|v\| = \sqrt{v \cdot v}$.
-    \item \textbf{Complement}: $v \in W \cap W^\perp \Rightarrow v = \vec{0}$.
-    \item \textbf{Projection}: $\hat{y} = \text{proj}_W y = \sum \frac{y \cdot u_i}{u_i \cdot u_i} u_i$.
-    \item \textbf{Decomposition}: $y = \hat{y} + z$, where $z \in W^\perp$.
+    \item \textbf{Complement:} $v \in W \cap W^\perp \Rightarrow v = \vec{0}$.
+    \item \textbf{Projection:} $\hat{y} = proj_W y = \sum \frac{y \cdot u_i}{u_i \cdot u_i} u_i$.
+    \item \textbf{Orthogonal Matrix:} $Q^T Q = I$; preserves norms.
 \end{itemize}
 \end{thmbox}
 
-\section*{11. Gram-Schmidt \& QR (Sec 6.4)}
+\section*{XII. Gram-Schmidt & QR (6.4)}
 \begin{algobox}{Algorithms}
 \begin{itemize}
-    \item \textbf{Gram-Schmidt}: $v_1 = x_1$; $v_2 = x_2 - \text{proj}_{v_1} x_2$.
-    \item \textbf{QR}: $A = QR$ ($Q$ orthogonal columns, $R$ upper triangular).
+    \item \textbf{Gram-Schmidt:} $v_1 = x_1$; $v_2 = x_2 - proj_{v_1} x_2$.
+    \item \textbf{QR Decomposition:} $A = QR$ where $Q$ is orthogonal and $R$ is upper triangular.
 \end{itemize}
 \end{algobox}
 
-\begin{exbox}{Example: Gram-Schmidt}
-$x_1 = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}, x_2 = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \Rightarrow v_1 = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}$, $v_2 = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} - \frac{1}{2}\begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} = \begin{bmatrix} 0.5 \\ -0.5 \\ 0 \end{bmatrix}$.
-\end{exbox}
-
-\section*{12. Least Squares (Sec 6.5, 6.6)}
-\begin{algobox}{Optimization}
+\section*{XIII. Least Squares (6.5, 6.6)}
+\begin{algobox}{Normal Equations}
 \begin{itemize}
-    \item \textbf{Goal}: Minimize $\|b - Ax\|$.
-    \item \textbf{Normal Equations}: Solve $A^T A \hat{x} = A^T b$.
-    \item \textbf{Uniqueness}: Unique if columns of $A$ are linearly independent.
+    \item \textbf{Goal:} Minimize $\|b - Ax\|$.
+    \item \textbf{Normal Equations:} Solve $A^T A \hat{x} = A^T b$.
+    \item \textbf{Uniqueness:} Unique if columns of $A$ are LI.
 \end{itemize}
 \end{algobox}
 \end{multicols}
-
 \end{document}
